--- a/_posts/2016-10-30-Linux-01.md
+++ b/_posts/2016-10-30-Linux-01.md
@@ -8,6 +8,10 @@ tags: linux OS
 * content
 {:toc}
 
+
+
 #进程与线程#
-**进程（process）**：处于执行期的程序及其所包含资源的总称
-**线程（thread）**：进程中活动的对象
+
+- **进程（process）**：处于执行期的程序及其所包含资源的总称
+
+- **线程（thread）**：进程中活动的对象
